[gd_scene load_steps=2 format=2]

[ext_resource path="res://SlotMachine.gd" type="Script" id=1]

[node name="SlotMachine" type="Node2D"]
position = Vector2( 423, 232 )
script = ExtResource( 1 )

[node name="SlotsLayout" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="SlotContainer1" type="CenterContainer" parent="SlotsLayout"]
margin_right = 8.0
margin_bottom = 40.0

[node name="slot_text" type="Label" parent="SlotsLayout/SlotContainer1"]
margin_top = 13.0
margin_right = 8.0
margin_bottom = 27.0
text = "1"

[node name="SlotContainer2" type="CenterContainer" parent="SlotsLayout"]
margin_left = 12.0
margin_right = 20.0
margin_bottom = 40.0

[node name="slot_text" type="Label" parent="SlotsLayout/SlotContainer2"]
margin_top = 13.0
margin_right = 8.0
margin_bottom = 27.0
text = "1"

[node name="SlotContainer3" type="CenterContainer" parent="SlotsLayout"]
margin_left = 24.0
margin_right = 32.0
margin_bottom = 40.0

[node name="slot_text" type="Label" parent="SlotsLayout/SlotContainer3"]
margin_top = 13.0
margin_right = 8.0
margin_bottom = 27.0
text = "1"

[node name="Button" type="Button" parent="."]
margin_left = 58.0
margin_top = 98.0
margin_right = 137.0
margin_bottom = 118.0
text = "Press Me"

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
